--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "path": "^0.12.7"
   },
-  "type" : "module"
+  "type": "module"
 }
