--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hbs": "^4.1.1",
     "http": "0.0.1-security",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "sqlite3": "^5.0.0"
